--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+
+
+.main-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+  background-color: rgb(19, 74, 116);
+  padding-bottom: 5rem;
+}
+.sub-div{
+  background-color: white;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.user-input{
+  padding:  0.5rem 2rem 0.5rem 2rem;
+  margin: 1rem;
+
+}
+
+.btn{
+  background-color: rgb(19, 74, 116);
+  color: white;
+  padding: 0.4rem 1rem 0.4rem 1rem;
+}
